2007-10-22  Robert Ancell  <robert.ancell@gmail.com>

	* lib/glchess.py: Catch and ignore all exceptions writing to stdout (Bug #426461)
	* lib/ai.py: Catch exception killing AI (Bug #456829)
	* lib/gtkui/dialogs.py: Fix exception when autoloading games with invalid AIs (Bug #486254)

2007-10-21  Robert Ancell  <robert.ancell@gmail.com>

	* Added tests/ dir containing PGN test files
	* lib/chess/lan.py, pgn.py: Add better support for informal PGN files (Bug #488244)
	* lib/gtkui/dialogs.py: GtkFileChooser.get_current_folder() can return None, handle this case (Bug #488244)
	* lib/scene/opengl/texture.py: Catch GLU exception building mipmaps and fallback to standard textures (Bug #442933)

2007-10-07  Robert Ancell  <robert.ancell@gmail.com>

	* Disable navigation buttons when at start/end of moves (Bug #440920)

2007-10-06  Robert Ancell  <robert.ancell@gmail.com>

	* Merged glchess-ggz branch to give glchess initial ggz support	 (Bug #392280)
	* Removed tab support and added game history support (no UI yet)
	* Added ability to resign and claim draws
	* Reworked some strings that were hard to translate (Bug #475555)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/main.py: Resolve a startup crasher bug in glChess, by
	reverting the invalid class. (Bug #471238)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gtkui/chessview.py: Fix another instance of bug #459740,
	which causes crashes because pygtk made the tooltip style private.

2007-06-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/gtkui.py, dialogs.py: Gracefully handle not being able
	  to get tooltip style (bug #459740)

2007-06-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/human.py: Clicking a second time on a selected square
	  deselects it (sf.net bug #1729938)

2007-06-10  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/ai.py: Use correct pid not 0 for killing AIs (Bug #443073)