@@ -9,6 +9,12 @@ except:
   pass
 
 try:
+    import pygtk
+    pygtk.require('2.0')
+except ImportError, err:
+    print ("PyGTK not found. Please make sure it is installed properly and referenced in your PYTHONPATH environment variable.")
+
+try:
     from glchess.glchess import start_game
 except ImportError:
     import sys
