@@ -13,12 +13,6 @@ import sys
 import time
 from gettext import gettext as _
 
-try:
-    import pygtk
-    pygtk.require('2.0')
-except ImportError, err:
-    print ("PyGTK not found. Please make sure it is installed properly and referenced in your PYTHONPATH environment variable.")
-
 import gobject
 import gtk
 import gtk.glade
